--- a/style.css
+++ b/style.css
@@ -94,8 +94,13 @@ footer {
 
 .ul-nav-bottom {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     width: 100%;
+}
+
+.li-menu-bottom {
+    list-style: none;
+    padding: 0 20px;
 }
 
 .li-menu-bottom:hover {
